# drogue-bluetooth

./: .gitignore
drogue-bluetooth-bluenrg/: Cargo.toml
drogue-bluetooth-bluenrg/src/: lib.rs
drogue-bluetooth-hci/: Cargo.toml
drogue-bluetooth-hci-core/: Cargo.toml
drogue-bluetooth-hci-core/src/: commands.rs  events.rs  lib.rs
drogue-bluetooth-hci-core/src/types/: advertising_data.rs  company_identifier.rs  mod.rs  status.rs
drogue-bluetooth-hci-macros/: Cargo.toml
drogue-bluetooth-hci-macros/src/: hci_command.rs  hci_deserializable.rs  hci_serializable.rs  lib.rs
drogue-bluetooth-hci/src/: command.rs  controller.rs  event.rs  host.rs  lib.rs  packet.rs  ser.rs  vendor.rs
drogue-bluetooth-ibeacon/: Cargo.toml
drogue-bluetooth-ibeacon/src/: lib.rs
examples/ibeacon/: Cargo.toml  Embed.toml
examples/ibeacon/src/: main.rs
