[package]
name = "drogue-bluetooth-bluenrg"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drogue-bluetooth-hci = { path = "../drogue-bluetooth-hci"}
drogue-bluetooth-hci-macros = { path = "../drogue-bluetooth-hci-macros"}
drogue-bluetooth-hci-core = { path = "../drogue-bluetooth-hci-core"}
