[package]
name = "drogue-bluetooth-hci-core"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5"
nom = { version = "6.0.0-beta3", default-features=false }
drogue-bluetooth-hci = { path = "../drogue-bluetooth-hci"}
drogue-bluetooth-hci-macros = { path = "../drogue-bluetooth-hci-macros"}
