[package]
name = "drogue-bluetooth-hci-macros"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

[dependencies]
syn = { version ="1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.24"
#drogue-bluetooth-hci = { path = "../drogue-bluetooth-hci" }

[lib]
proc-macro = true
